# git-pre-hooks

./: .gitignore  README.md  pre-push  pyproject.toml  requirements.txt
project/tests/: test_main.py
